# credit-risk-portfolio

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  project_CLAUDE.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
app/: Home.py
app/pages/: 1_Concessao.py  1_Origination.py  2_Portfolio.py  3_EarlyWarning.py  4_Explainability.py  4_Explicabilidade.py  5_ContextualScore.py  5_ScoreContextual.py  6_API_Playground.py
artifacts/: pd_calibrator_lc.joblib  pd_model_lc.joblib
data/processed/: adaptive_shap_by_decile.csv  adaptive_shap_monthly.csv  arf_drifts_lc.csv  arf_yearly_lc.csv  frozen_oot_lc.csv  macro_features.parquet  oos_predictions.parquet  ridge_surrogate_coefs.csv  rolling_oot_lc.csv  sliding_calibration_lc.csv
data/schemas/: features.yaml  lendingclub.json
docs/: deploy.md
hf_space/: README.md
notebooks/: 01_eda.ipynb  02_feature_engineering.ipynb  03_modeling_pd.ipynb  04_modeling_lgd.ipynb  05_expected_loss.ipynb  06_vintage_analysis.ipynb  07_drift_monitoring.ipynb  08_early_warning.ipynb  09_synthetic_data.ipynb  10_contextual_score.ipynb  11_score_unico_falha.ipynb  12_online_learning.ipynb  13_adaptive_shap.ipynb  _build_notebooks.py
notebooks/legacy/: 01_eda.ipynb  03_modeling_pd.ipynb  05_expected_loss.ipynb  09_synthetic_data.ipynb
scripts/: sync_hf_space.sh  sync_readmes.py
src/: config.py
src/api/: __init__.py  dependencies.py  logging_config.py  main.py  metrics.py  middleware.py  schemas.py  settings.py  state.py
src/api/routers/: __init__.py  explain.py  health.py  monitor.py  predict.py
src/contextual/: context_features.py  data_generator.py  interaction_model.py
src/early_warning/: behavioral_signals.py  score_trajectory.py
src/evaluate/: metrics.py
src/explain/: run_adaptive_shap.py  shap_adaptive.py  shap_explain.py
src/features/: batch_aggregations.py  build_features.py  lendingclub_features.py  macro_features.py
src/ingestion/: download.py  download_lendingclub.py
src/models/: expected_loss.py  lgd_model.py  online_calibration.py  online_pd_model.py  pd_model.py  pd_model_lc.py  tune_pd.py
src/monitoring/: drift_detector.py  drift_online.py  psi.py  vintage_analysis.py
tasks/: backlog.md  frontend-redesign.md  todo.md
tests/: conftest.py  test_api.py  test_features.py  test_models.py  test_monitoring.py  test_online_pd.py  test_pipeline_lc.py  test_shap_adaptive.py
web/: .env.example  README.md  package-lock.json  package.json  vitest.config.ts
web/scripts/: gen-types.sh
web/src/app/: apple-icon.tsx  icon.tsx  page.tsx  (+2 more)
(+51 files in other folders)
