[project]
name = "credit-risk-portfolio"
version = "0.1.0"
description = "Pipeline end-to-end de risco de crédito PJ: PD, LGD, Expected Loss, monitoramento e score contextual"
requires-python = ">=3.11"
dependencies = [
    "lightgbm>=4.3",
    "shap>=0.45",
    "numba>=0.57",
    "llvmlite>=0.40",
    "statsmodels>=0.14",
    "mlflow>=2.12",
    "loguru>=0.7",
    "streamlit>=1.33",
    "pandas>=2.2",
    "numpy>=1.26",
    "scikit-learn>=1.4",
    "requests>=2.31",
    "kaggle>=1.6",
    "scipy>=1.13",
    "matplotlib>=3.8",
    "seaborn>=0.13",
    "plotly>=5.20",
    "ipykernel>=6.29",
    "jupyter>=1.0",
    "nbformat>=5.9",
    "optuna>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-cov>=5.0",
    "ruff>=0.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
